@@ -6,6 +6,7 @@ import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.fml.common.Loader;
 import net.silentchaos512.lib.registry.SRegistry;
 import net.silentchaos512.scalinghealth.client.ClientTickHandler;
+import net.silentchaos512.scalinghealth.client.DifficultyDisplayHandler;
 import net.silentchaos512.scalinghealth.client.HeartDisplayHandler;
 import net.silentchaos512.scalinghealth.event.ScalingHealthClientEvents;
 import net.silentchaos512.scalinghealth.event.WitEventHandler;
@@ -19,6 +20,7 @@ public class ScalingHealthClientProxy extends ScalingHealthCommonProxy {
     MinecraftForge.EVENT_BUS.register(new ScalingHealthClientEvents());
     MinecraftForge.EVENT_BUS.register(new ClientTickHandler());
     MinecraftForge.EVENT_BUS.register(new HeartDisplayHandler());
+    MinecraftForge.EVENT_BUS.register(new DifficultyDisplayHandler());
     if (Loader.isModLoaded("wit") || Loader.isModLoaded("WIT"))
       MinecraftForge.EVENT_BUS.register(new WitEventHandler());
     registry.clientPreInit();
